# Kaggle-shop-sales

./: Iron Kaggle_Raliza_EDA.ipynb  main.ipynb  pyproject.toml
