[project]
name = "kaggle-shop-sales"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksa Mihajlovic",email = "mihajlovic.aleksa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.0.1"

